update post action now does not require explicitly to pass json encoded data. Only fields in request gets validated.
